5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1602_1017.log
== TEST (2019-03-25 18:58:56) 
-- CODE:
import math 
t1= radians(float(input("Latitude de P1: ")))
g1 =radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2= radians(float(input("Latitude de P1: ")))

d=R.arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1−g2))

print(round(d,2))
-- ERROR:
File "XXXX", line 7
    d=R.arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1−g2))
                                                       ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:59:11) 
-- CODE:
import math 
t1= radians(float(input("Latitude de P1: ")))
g1 =radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2= radians(float(input("Latitude de P1: ")))

d=R.arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1-g2))

print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    t1= radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:59:19) 
-- CODE:
import math 

t1= radians(float(input("Latitude de P1: ")))
g1 =radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2= radians(float(input("Latitude de P1: ")))

d=R.arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1-g2))

print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t1= radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:59:50) 
-- CODE:
from math import* 

t1= radians(float(input("Latitude de P1: ")))
g1 =radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2= radians(float(input("Latitude de P1: ")))

d=R.arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1-g2))

print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    d=R.arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1-g2))
NameError: name 'R' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:00:12) 
-- CODE:
from math import* 

t1= radians(float(input("Latitude de P1: ")))
g1 =radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2= radians(float(input("Latitude de P1: ")))

d=R.arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1-g2))

print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    d=R.arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1-g2))
NameError: name 'R' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:04) 
-- CODE:
from math import* 

t1= radians(float(input("Latitude de P1: ")))
g1 =radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2= radians(float(input("Latitude de P1: ")))

r = 6371.01
d= R*arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1-g2))

print(round(d,2))
-- EXECUTION TIME:
0.247781
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 9, in <module>
    d= R*arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1-g2))
NameError: name 'R' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:02:10) 
-- CODE:
from math import* 

t1= radians(float(input("Latitude de P1: ")))
g1 =radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2= radians(float(input("Latitude de P1: ")))

r = 6371.01
d= R*arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1-g2))

print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    d= R*arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1-g2))
NameError: name 'R' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:02:33) 
-- CODE:
from math import* 

t1= radians(float(input("Latitude de P1: ")))
g1 =radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2= radians(float(input("Latitude de P1: ")))

r = 6371.01
d= R*arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1-g2))

print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    d= R*arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1-g2))
NameError: name 'R' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:02:35) 
-- CODE:
from math import* 

t1= radians(float(input("Latitude de P1: ")))
g1 =radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2= radians(float(input("Latitude de P1: ")))

r = 6371.01
d= R*arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1-g2))

print(round(d,2))
-- EXECUTION TIME:
0.173984
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 9, in <module>
    d= R*arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1-g2))
NameError: name 'R' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:02:36) 
-- CODE:
from math import* 

t1= radians(float(input("Latitude de P1: ")))
g1 =radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2= radians(float(input("Latitude de P1: ")))

r = 6371.01
d= R*arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1-g2))

print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    d= R*arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1-g2))
NameError: name 'R' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:04:09) 
-- CODE:
from math import* 

t1= radians(float(input("Latitude de P1: ")))
g1 =radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2= radians(float(input("Latitude de P1: ")))

r = 6371.01
d= R*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d,2))
-- EXECUTION TIME:
0.178828
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 9, in <module>
    d= R*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'R' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:04:51) 
-- CODE:
from math import* 

t1= radians(float(input("Latitude de P1: ")))
g1 =radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2= radians(float(input("Latitude de P1: ")))

r = 6371.01
d = R * arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d,2))
-- EXECUTION TIME:
0.168767
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 9, in <module>
    d = R * arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'R' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:05:47) 
-- CODE:
from math import* 

t1= radians(float(input("Latitude de P1: ")))
g1 =radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2= radians(float(input("Latitude de P1: ")))

r = 6371.01
d = R * arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d,2))
-- EXECUTION TIME:
0.17849
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 9, in <module>
    d = R * arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'R' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:05:50) 
-- CODE:
from math import* 

t1= radians(float(input("Latitude de P1: ")))
g1 =radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2= radians(float(input("Latitude de P1: ")))

r = 6371.01
d = R * arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    d = R * arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'R' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:05:54) 
-- CODE:
from math import* 

t1= radians(float(input("Latitude de P1: ")))
g1 =radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2= radians(float(input("Latitude de P1: ")))

r = 6371.01
d = R * arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d,2))
-- EXECUTION TIME:
0.148807
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 9, in <module>
    d = R * arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'R' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:06:41) 
-- CODE:
from math import* 

t1= radians(float(input("Latitude de P1: ")))
g1 =radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2= radians(float(input("Latitude de P1: ")))

r = 6371.01
d = R * arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d,2))
-- EXECUTION TIME:
0.195713
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 9, in <module>
    d = R * arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'R' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:06:44) 
-- CODE:
from math import* 

t1= radians(float(input("Latitude de P1: ")))
g1 =radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2= radians(float(input("Latitude de P1: ")))

r = 6371.01
d = R * arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    d = R * arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'R' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:07:32) 
-- CODE:
from math import* 

t1= radians(float(input("Latitude de P1: ")))
g1 =radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2= radians(float(input("Latitude de P1: ")))

r = 6371.01
d = r * arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d,2))
-- EXECUTION TIME:
0.175334
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 9, in <module>
    d = r * arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'arccos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:07:35) 
-- CODE:
from math import* 

t1= radians(float(input("Latitude de P1: ")))
g1 =radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2= radians(float(input("Latitude de P1: ")))

r = 6371.01
d = r * arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    d = r * arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'arccos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:08:17) 
-- CODE:
from math import* 

t1= radians(float(input("Latitude de P1: ")))
g1 =radians(float(input("Latitude de P1: ")))
t2 = radians(float(input("Latitude de P1: ")))
g2= radians(float(input("Latitude de P1: ")))

r = 6371.01
d = r * acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d,2))

-3.130601
-60.02306
-3.083550
-60.027781
-- EXECUTION TIME:
0.195848
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
